tests/tools/turndefs/routeSampler/errors/testsuite.tools
# test bad input
no_routes

# invalid options
invalid_options
no_intervals
